# Skellytour

./: README.md  pyproject.toml  setup.py
skelly/: main.py  mainmethod.py  nnunetv1_predict.py  nnunetv1_setup.py
skellytour/: mainmethod.py  nnunetv1_predict.py  nnunetv1_setup.py  nnunetv2_predict.py  nnunetv2_setup.py  postprocessing.py  subseg_postprocessing.py
